--- a/reset.css
+++ b/reset.css
@@ -133,3 +133,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+            <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>AluraBooks</h1>
+    </body>
+</html>
