--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("styles/header.css");
 :root {
     --cor-de-fundo: #EBECEE;
 }
@@ -9,3 +10,7 @@ body {
 h1 {background-color: white;
 }
 
+:root {
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+}
