--- a/style.css
+++ b/style.css
@@ -14,3 +14,16 @@ h1 {background-color: white;
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
 }
+:root {
+    --cor-de-fundo: #ebecee;
+    --branco: #ffffff;
+    --laranja: #eb9b00;
+  }
+  --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  :root {
+    --cor-de-fundo: #ebecee;
+    --branco: #ffffff;
+    --laranja: #eb9b00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  }
+  
