--- a/style.css
+++ b/style.css
@@ -39,4 +39,6 @@ h1 {background-color: white;
     font-size: 16px;
     font-weight: 400;
 }
-  
+@import url("styles/header.css");
+@import url("styles/banner.css");
+ 
