--- a/style.css
+++ b/style.css
@@ -41,4 +41,16 @@ h1 {background-color: white;
 }
 @import url("styles/header.css");
 @import url("styles/banner.css");
- 
+#container {
+  display:flex ;
+}
+.cartao {
+  margin: 1rem 1rem;
+}
+.cartao {
+  margin: 1rem 1rem;
+  background-color: aqua;
+  height: 20rem;
+  flex-grow: 1;
+  flex-basis: calc(33% -6rem);
+}
